# apps/api/src/handlers/mod.rs
@@ -3,6 +3,7 @@ use serde::Serialize;
 
 use crate::error::AppError;
 
+pub mod categories;
 pub mod comments;
 pub mod hello;
 pub mod invites;
